--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
 language: ruby
 env: CUCUMBER_FORMAT=progress
 bundler_args: --without extras
-script: "script/ci.sh"
+script: "bundle exec rspec spec/structs_spec.rb"
 rvm:
   - 1.8.7
   - 1.9.2
   - 1.9.3
-  - ree
-  - jruby-18mode
-  - jruby-19mode
   - rbx-18mode
   - rbx-19mode
 branches:
