--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 env: CUCUMBER_FORMAT=progress
 bundler_args: --without extras
-script: "bundle exec rspec spec/structs_spec.rb"
+script: "bundle exec rspec spec/vcr/structs_spec.rb"
 rvm:
   - 1.8.7
   - 1.9.2
